<resources>
    <string name="app_name">Hike With Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scrollview_content_description">Test Value</string>
    <string name="welcome_to_hike_with_me">Welcome to Hike With Me!</string>
    <string name="search">Search...</string>
    <string name="explore_trails">Explore Trails</string>
    <string name="home">Logout</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="upload_id">Upload ID:</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email">Email:</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last Name:</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="first_name">First Name:</string>
    <string name="send">Send</string>
    <string name="sendChat">SEND</string>
    <string name="city_name">NOT FOUND</string>
</resources>